# hsobot

./: .env  .env.dev  README.md  hsobot.py  pyproject.toml
src/plugins/: README.md
src/plugins/hso/: README.md  __init__.py  config.py  data_source.py  model.py
